--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -24,12 +24,34 @@ body {
   color: #212121;
   background: #ffffff;
 }
-
+h1,
+h2,
+h3,
+h4,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
 .list {
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
   list-style: none;
 }
 .link {
   text-decoration: none;
+}
+
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 /* Логотип */
 .logo {
@@ -49,6 +71,35 @@ body {
 /* Header */
 .header {
   background-color: #ffffff;
+  border-bottom: 1px solid #ececec;
+}
+.header-container {
+  display: flex;
+  align-items: center;
+}
+.nav {
+  display: flex;
+}
+.nav-list {
+  display: flex;
+  margin-left: 93px;
+}
+.nav .link {
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 25px;
+}
+.nav-list .link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+.nav-item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.nav-contact-item:not(:last-child) {
+  margin-right: 50px;
 }
 
 .nav-link {
@@ -76,27 +127,41 @@ body {
 .nav-list .nav-link.current {
   color: var(--akcent-text);
 }
+.header-contact {
+  display: block;
+  display: flex;
+  margin-left: auto;
+}
+.header-contact .link {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
 /* Hero */
 .hero {
+  text-align: center;
+  padding-top: 200px;
+  padding-bottom: 200px;
   background-color: var(--hero-bg);
 }
 .hero-title {
+  margin-bottom: 30px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
 }
 .hero-btn {
+  min-width: 200px;
+  min-height: 50px;
+  padding: 8px 30px;
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
-  display: flex;
+  display: inline-block;
   align-items: center;
-  text-align: center;
   letter-spacing: 0.06em;
   color: #ffffff;
   cursor: pointer;
@@ -106,7 +171,11 @@ body {
 }
 
 /* Особенности */
+.advantages-list {
+  display: flex;
+}
 .advantages-title {
+  margin-bottom: 10px;
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
@@ -115,12 +184,21 @@ body {
   color: var(--main-text);
 }
 .advantages-text {
+  min-width: 270px;
+  min-height: 75px;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--secondary-text);
 }
+
+.advantages-item:not(:last-child) {
+  margin-right: 30px;
+}
 /* Чем мы занимаемся */
+.work {
+  padding-bottom: 94px;
+}
 .work-title,
 .team-title {
   font-weight: 700;
@@ -131,14 +209,39 @@ body {
 
   color: var(--main-text);
 }
+.work-list {
+  margin-top: 50px;
+  display: flex;
+}
+.work-item {
+  width: 370px;
+  height: 294px;
+}
+.work-item:not(:last-child) {
+  margin-right: 30px;
+}
 /* Наша команда */
 .team {
   background-color: #f5f4fa;
 }
 .team-item {
+  width: 270px;
+  height: 368px;
   background-color: #ffffff;
+  padding-bottom: 30px;
+}
+.team-title {
+  margin-bottom: 50px;
+}
+.team-list {
+  display: flex;
+}
+.team-item:not(:last-child) {
+  margin-right: 30px;
 }
 .team-member {
+  margin-top: 30px;
+  margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -155,6 +258,8 @@ body {
 }
 /* Футер */
 .footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: var(--hero-bg);
 }
 .map-link {
@@ -163,6 +268,12 @@ body {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #ffffff;
+}
+.footer-adress {
+  margin-top: 30px;
+}
+.footer-item:not(:last-child) {
+  margin-bottom: 9px;
 }
 .footer-contact {
   font-style: normal;
@@ -177,15 +288,31 @@ body {
 }
 
 /* Страница Портфолио */
+.btn-list {
+  padding: 6px 22px;
+  display: flex;
+  margin-bottom: 50px;
+  justify-content: center;
+}
+.btn-item {
+}
+.btn-item:not(:last-child) {
+  margin-right: 8px;
+}
 .projects-btn {
+  height: 38px;
+  padding: 6px 22px;
   font-family: var(--main-font);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
+  cursor: pointer;
   color: var(--main-text);
   background-color: #f5f4fa;
+  border-radius: 4px;
+  border: transparent;
 }
 .projects-btn:hover,
 .projects-btn:focus {
@@ -193,8 +320,34 @@ body {
   color: #ffffff;
   background-color: var(--akcent-text);
 }
+.projects-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.projects-title {
+  margin-top: 20px;
+  margin-bottom: 4px;
+  margin-left: 24px;
+  margin-right: 24px;
+}
+.projects-text {
+  margin-left: 24px;
+  margin-right: 24px;
+  margin-bottom: 20px;
+}
 .projects-item {
+  width: 370px;
+  height: 404px;
+  margin-right: 30px;
+  margin-bottom: 30px;
   background-color: #ffffff;
+  border: 1px solid #eeeeee;
+}
+.projects-item:nth-child(3n) {
+  margin-right: 0;
+}
+.projects-item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
 .projects-title {
   font-weight: 700;
