--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -32,6 +32,12 @@ p {
   margin-top: 0;
   margin-bottom: 0;
 }
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 .list {
   padding-left: 0;
   margin-top: 0;
@@ -50,6 +56,7 @@ p {
   margin-right: auto;
 }
 .section {
+  width: 100%;
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -128,9 +135,11 @@ p {
   color: var(--akcent-text);
 }
 .header-contact {
-  display: block;
   display: flex;
   margin-left: auto;
+}
+.header-contact .link {
+  display: block;
 }
 .header-contact .link {
   padding-top: 32px;
@@ -144,6 +153,9 @@ p {
   background-color: var(--hero-bg);
 }
 .hero-title {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 696px;
   margin-bottom: 30px;
   font-weight: 900;
   font-size: 44px;
@@ -153,15 +165,12 @@ p {
   color: #ffffff;
 }
 .hero-btn {
-  min-width: 200px;
-  min-height: 50px;
   padding: 8px 30px;
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   display: inline-block;
-  align-items: center;
   letter-spacing: 0.06em;
   color: #ffffff;
   cursor: pointer;
@@ -185,7 +194,7 @@ p {
 }
 .advantages-text {
   min-width: 270px;
-  min-height: 75px;
+
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -214,8 +223,10 @@ p {
   display: flex;
 }
 .work-item {
-  width: 370px;
-  height: 294px;
+  max-width: 370px;
+}
+.no-gap {
+  display: block;
 }
 .work-item:not(:last-child) {
   margin-right: 30px;
@@ -226,7 +237,6 @@ p {
 }
 .team-item {
   width: 270px;
-  height: 368px;
   background-color: #ffffff;
   padding-bottom: 30px;
 }
@@ -289,18 +299,14 @@ p {
 
 /* Страница Портфолио */
 .btn-list {
-  padding: 6px 22px;
   display: flex;
   margin-bottom: 50px;
   justify-content: center;
-}
-.btn-item {
 }
 .btn-item:not(:last-child) {
   margin-right: 8px;
 }
 .projects-btn {
-  height: 38px;
   padding: 6px 22px;
   font-family: var(--main-font);
   font-weight: 500;
@@ -323,33 +329,25 @@ p {
 .projects-list {
   display: flex;
   flex-wrap: wrap;
+  margin-left: -30px;
+  margin-top: -30px;
 }
-.projects-title {
-  margin-top: 20px;
-  margin-bottom: 4px;
-  margin-left: 24px;
-  margin-right: 24px;
-}
-.projects-text {
-  margin-left: 24px;
-  margin-right: 24px;
-  margin-bottom: 20px;
-}
+
 .projects-item {
-  width: 370px;
-  height: 404px;
-  margin-right: 30px;
-  margin-bottom: 30px;
+  flex-basis: calc(100% / 3 - 30px);
+  margin-left: 30px;
+  margin-top: 30px;
   background-color: #ffffff;
-  border: 1px solid #eeeeee;
 }
-.projects-item:nth-child(3n) {
-  margin-right: 0;
-}
-.projects-item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
+.projects-item-content {
+  padding: 20px 24px;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
 }
 .projects-title {
+  margin-bottom: 4px;
+
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -361,4 +359,11 @@ p {
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: #757575;
+}
+
+.projects-item:nth-child(3n) {
+  margin-right: 0;
+}
+.projects-item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
